syntax = "proto3";

package shortvideo;

message Shortvideo {
    string userid=1;
    int64 exp_cvr=2;
}

message  ecvr_ts {
    repeated Shortvideo  adcvr = 1;

}
